Fixed gap margin between top nav and side nav

--- a/io.web/src/main/webapp/css/cardshifter.css
+++ b/io.web/src/main/webapp/css/cardshifter.css
@@ -1,6 +1,7 @@
 body {
     font-size: 120%;
     font-family: Verdana, Geneva, sans-serif;
+    float: left;
 }
 
 /* FORMATTING FOR TOP NAV BAR */
@@ -59,9 +60,12 @@ body {
 }
 
 .csh-side-nav {
+  position: relative;
+  float: left;
   margin-top: 25px;
   background-color: #EEEEEE;
   padding-bottom: 5px;
+  bottom: 0px;
 }
 
 
